--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 Hi 👋, I'm Roberth castillo.
 <!-- https://github.com/roberthcm -->
+
+Credits to John Asprilla
+<!--https://github.com/JHONASPRILLA-->
